# coast

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: auto_assign_author.yml
scripts/repo/: init.sh
scripts/repo/migrations/: 20210105034311_create_users_table.sql
src/: config.rs  database.rs  main.rs  middleware.rs  router.rs  routes.rs
src/config/: base.toml  development.toml
src/controllers/: users_controller.rs
src/core/: mod.rs  repo.rs
src/core/models/: user.rs
src/middleware/: current_user.rs  fallback.rs  now.rs  request_counter.rs
src/views/: users_view.rs
src/web/: middleware.rs  mod.rs  router.rs
src/web/controllers/: users_controller.rs
src/web/middleware/: current_user.rs  now.rs
src/web/templates/layout/: app.html
src/web/templates/users/: edit.html  form.html  index.html  new.html  show.html
src/web/views/: mod.rs  users_view.rs
