[package]
name = "coast"
version = "0.1.0"
authors = ["gabrieltruss <gabriel.taylor.russ@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.15.0"
async-std = { version = "1.6.0", features = ["attributes"] }
askama = { version = "0.10.5", features = ["with-tide"] }
askama_tide = "0.12.0"
config = "0.10"
serde = {version = "1.0", features = ["derive"] }
lazy_static = "1.4"

[profile.dev]
debug = 0

[profile.test]
debug = 0
