[package]
name = "coast"
version = "0.1.0"
authors = ["gabrieltruss <gabriel.taylor.russ@gmail.com>"]
edition = "2018"

[dependencies]
askama = { version = "0.10.5", features = ["with-tide"] }
askama_tide = "0.12.0"
async-std = { version = "1.6.0", features = ["attributes"] }
chrono = "0.4.19"
config = "0.10"
lazy_static = "1.4"
serde = {version = "1.0", features = ["derive"] }
sqlx = { version = "0.4.2", features = [ "runtime-async-std-native-tls", "postgres", "macros", "chrono", "uuid" ] }
tide = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.12", features = ["derive"] }

[profile.dev]
debug = 0

[profile.test]
debug = 0
